--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </li>
             <li><a class="projetos">Projetos</a></li>
             <a class="GitHub" href="https://github.com/SamuelSoares22"><i class="fa-brands fa-github"></i></a>
-            <li ><a class="Linkedin" href="https://www.linkedin.com/in/samuel-soares-728113205/"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li ><a class="Linkedin" href="https://www.linkedin.com/in/samuel-soares-coelho/"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -56,9 +56,10 @@
                     </header>
                     <p class="Portifolio-descricao">
                         Empresa: Evah Café(Brasília) 
-                        Cargo: Desenvolvedor Front-and
-                        Período: Atual
-                        Atribuições: Criando e Desenvolvendo sites web e moobile Com Uso de HTML:5 e CSS3 com Jquery.<br>
+                        Cargo: Desenvolvedor Front-and(Frellancer)
+                        Período: 29/04/2024 - Atual
+                        Atribuições: Criando e Desenvolvendo sites web e moobile Com Uso de HTML:5 e CSS3 com Jquery Nodejs,<br>
+                        Criando templetes usando Figma contato direto com o cliente. 
                         <br>
                         Empresa: CAOA - Hyundai Premium Services (São Paulo)
                         Cargo: Auxiliar de Escritório em Geral
@@ -89,13 +90,14 @@
                     <header class="Portifolio-card-cabecalho">
                         <div class="Portifolio-card-cabecalho-detalhes">
                             <span class="destaque amarelo">Projetos e Copetências </span>
-                            <h3 class="Portifolio-titulo">Evah CaFé;Senac Ui/UX</h3><br>
+                            <h3 class="Portifolio-titulo">Evah CaFé e Senac Ui/UX</h3><br>
                             <p> aqui estão  meus projetos, pessoais e do trabalho</p>
                         </div>
                         <p class="Portifolio-avliacao"></p>
                     </header>
-                    <p class="Portifolio-descricao">Evah CaFé;Senac UI/UX</p>
+                    <p class="Portifolio-descricao"></p>
                         <p>EvahCafe: fiz um site interativo usando HTML5 e CSS com interações e animações com Jquery</p>
+                        <a class="botao" href="https://samuelsoares22.github.io/samuelsoares22evahcafe.github.io/">EvahCafe</a>
                         <p>Senac UI/UX: com participação com o grupo de desenlvimento UI/UX Criando a Landing Page Para a Faculade-Senac</p>
                         
                       <div class="Portifolio-autor">
